[package]
name = "raytracer"
version = "0.1.0"
authors = ["Matthew Deville <mdeville@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.2"
nalgebra = "0.25.3"
rayon = "1.5.0"
rand = "0.8.0"